# senza-fastapi

./: .gitignore  .gitmodules  README.md  __init__.py  main.py  pyproject.toml
public/: index.css  index.css.map  index.html
sass/: index.sass
scripts/: compile_pyscript.py  compile_sass.py
web/: app.py  config.toml
web/views/: test_page.py
