[tool.poetry]
name = "senza-fastapi"
version = "0.1.0"
description = "fast-api bootstrap for senza"
authors = ["josh s wilkinson <joshswilkinson@pm.me>"]
readme = "README.md"

packages = [{ include = "routers" }]

[tool.poetry.dependencies]
python = ">3.11,<4.0"
fastapi = "^0.111.0"
websockets = "^12.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
tomli-w = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'main:server.run'
compile_sass = 'scripts.compile_sass:compile_sass'
compile_pyscript = 'scripts.compile_pyscript:compile_pyscript'

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
senza-fastapi = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python main.py"
compile_sass = "sass ./sass/index.sass ./public/index.css"
compile_pyscript = "python scripts/compile_pyscript.py"
